@startuml

title __SRC's Class Diagram__\n

  package  {
    class Coordinate {
        - x : int
        - y : int
        + Coordinate()
        + getX()
        + getY()
        + equals()
        + hashCode()
    }
  }
  

  package  {
    class Destination {
        - locationStudent : Point2D
        - locationTeacher : Point2D
        - name : String
        + Destination()
        + getDestinations()
    }
  }
  

  package  {
    class MapDemo {
        {static} - STUDENTS : int
        {static} - TEACHERS : int
        - canvas : ResizableCanvas
        - students : ArrayList<Person>
        - teachers : ArrayList<Person>
        - counter : int
        + position : Point2D
        {static} + OMEGA : int
        {static} + targetsStudents : ArrayList<Target>
        {static} + targetsTeachers : ArrayList<Target>
        + start()
        + init()
        + draw()
        + update()
        {static} + main()
    }
  }
  

  package  {
    class Pathfind {
        - distancemap : int[][]
        {static} + MAX_INT : int
        - toSearch : LinkedList<Coordinate>
        - done : ArrayList<Coordinate>
        + Pathfind()
        + getDistancemap()
    }
  }
  

  package  {
    class Pathfinding {
        - map : ArrayList<Tile>
        - OGmap : ArrayList<Tile>
        + Pathfinding()
        + tiledown()
        + tileleft()
        + tileright()
        + tileup()
        + getMap()
    }
  }
  

  package  {
    class Person {
        - position : Point2D
        - angle : double
        - speed : double
        - image : BufferedImage
        - dirVector : Point2D
        - gender : boolean
        - teacher : boolean
        + Person()
        + Person()
        + draw()
        + moveChar()
        + setTarget()
        {static} + getRandomBoolean()
        + updateTile()
        + getCurrentTile()
        + getTarget()
    }
  }
  

  package  {
    class Target {
        - name : String
        + Target()
        + getName()
        + getPathfind()
    }
  }
  

  package  {
    class Targets {
        + targetsStudents()
        + targetsTeachers()
    }
  }
  

  MapDemo -up-|> Application
  MapDemo o-- TiledMap : map
  MapDemo o-- Pathfind : p
  Pathfind o-- Coordinate : target
  Person o-- Tile : currentTile
  Person o-- Target : target
  Target o-- Pathfind : pathfind


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
